[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tennis_booking"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
description = ""

[tool.hatch.build.targets.wheel]
packages = ["tennis"]
